<resources>
    <string name="app_name">Fllawi</string>
    <string name="app_provider">com.grandhill.provider</string>
    <string name="application_crashed">Application Crashed !!!</string>
    <string name="crash_message">Are you sure you want to send this crash log to our developer team?</string>
    <string name="error_log_receiver">satish.nada98@gmail.com</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="crash_log_file">Please find crash log file attachment.</string>
    <string name="email_provider">Choose an email provider :</string>
    <string name="permission_denied">You have denied Permission, So you are not allowed to send crash log</string>
    <string name="facebook_app_id">316142078844781</string>
    <string name="fb_login_protocol_scheme">fb786185828209660</string>
    <string name="server_client_id">655387601105-0kgs293a0babs4euq6vdkk2thloinsek.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyBbzm1koLbD-cMj0RQhV8fEwyZjzRTkAkk</string>
    <string name="str_default_rationale_message">We need this permission.Please allow.</string>
    <string name="str_rationale_message">Required Permission</string>
    <string name="str_possitive_button">OK</string>
    <string name="str_negative_button">Cancel</string>
    <string name="no_internet_connection">Please check your internet connection.</string>
    <string name="message_something_wrong">Something went wrong.Please try again later.</string>
    <string name="downloading_files">Downloading files…</string>
    <string name="skip">Skip</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="connect_facebook">Connect with Facebook</string>
    <string name="connect_google">Connect with Google  </string>
    <string name="connect_linkedin">Connect with Linkedin</string>
    <string name="sign_in_email">Sign In with Email   </string>
    <string name="privacy_policy_terms">By continuing you accept the Terms of Use and Privacy Policy</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="create_account">Create new account ?</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_account">Already have an account?</string>
    <string name="sing_in">Sign In</string>
    <string name="select_country">Select Country</string>
    <string name="valid_email">Please enter your email.</string>
    <string name="valid_email2">Please enter valid email.</string>
    <string name="valid_password">Please enter your password.</string>
    <string name="valid_old_password">Please enter your old password.</string>
    <string name="valid_new_password">Please enter your new password.</string>
    <string name="valid_password_length">Password should be at least 6 characters long.</string>
    <string name="valid_confirm_password">Please enter confirm password.</string>
    <string name="valid_confirm_new_password">Please enter confirm password.</string>
    <string name="valid_password_match">Password and confirm password does not match.</string>
    <string name="valid_first_name">Please enter first name</string>
    <string name="valid_last_name">Please enter last name</string>
    <string name="valid_date_of_birth">Please select date of birth</string>
    <string name="valid_mobile">Please enter mobile number</string>
    <string name="valid_contact_number">Please enter contact number</string>
    <string name="valid_country">Please select country</string>
    <string name="valid_current_password">Please enter current password.</string>
    <string name="valid_new_confirm_password">New password and confirm password does not match.</string>
    <string name="valid_reply_comment">Please enter message.</string>
    <string name="valid_feedback">Please enter your feedback.</string>
    <string name="choose_your_interest">Choose Your Interest</string>
    <string name="all">All</string>
    <string name="news">News</string>
    <string name="blog">Blog</string>
    <string name="blogs">Blogs</string>
    <string name="articles">Articles</string>
    <string name="next">Next</string>
    <string name="select">Select</string>
    <string name="post">Post</string>
    <string-array name="top_destinations">
        <item>@drawable/ic_close</item>
        <item>@drawable/ic_close</item>
        <item>@drawable/ic_close</item>
        <item>@drawable/ic_close</item>
    </string-array>
    <string name="our_services">Our Services</string>
    <string name="facility_parking">Free Parking</string>
    <string name="facility_laundry">Free Laundry</string>
    <string name="facility_breakfast">Free Breakfast</string>
    <string name="facility_television">Free Television</string>
    <string name="facility_wifi">Free Wifi</string>
    <string name="facility_swimming">Swimming Pool</string>
    <string-array name="room_facilities_str">
        <item>@string/facility_parking</item>
        <item>@string/facility_laundry</item>
        <item>@string/facility_breakfast</item>
        <item>@string/facility_television</item>
        <item>@string/facility_wifi</item>
        <item>@string/facility_swimming</item>
    </string-array>
    <string name="room_facilities">Room &amp; Facilities</string>
    <string-array name="side_menu">
        <item>@drawable/ic_home_menu</item>
        <item>@drawable/ic_menu_profile</item>
        <item>@drawable/ic_menu_overview</item>
        <item>@drawable/ic_booking_history</item>
        <item>@drawable/ic_menu_notifaction</item>
        <item>@drawable/ic_menu_change_password</item>
        <item>@drawable/ic_menu_privacy_policy</item>
        <item>@drawable/ic_menu_term_and_conditions</item>
        <item>@drawable/ic_menu_help_support</item>
        <item>@drawable/ic_bank_info_menu</item>
        <item>@drawable/ic_menu_logout</item>
    </string-array>
    <string-array name="side_menu_str">
        <item>@string/menu_home</item>
        <item>@string/menu_profile</item>
        <item>@string/menu_overview</item>
        <item>@string/menu_history</item>
        <item>@string/menu_notification</item>
        <item>@string/menu_change_password</item>
        <item>@string/menu_privacy_policy</item>
        <item>@string/menu_term_and_condition</item>
        <item>@string/menu_help</item>
        <item>@string/menu_bank_info</item>
        <item>@string/menu_logout</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_history">Booking History</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_term_and_condition">Terms &amp; Conditions</string>
    <string name="menu_help">Help &amp; Support</string>
    <string name="menu_bank_info">Bank Info</string>
    <string name="menu_logout">Logout</string>
    <string-array name="our_services_str">
        <item>@string/accommodation</item>
        <item>@string/thing_to_do</item>
        <item>@string/coupons</item>
        <item>@string/transportation</item>
        <item>@string/event</item>
    </string-array>
    <string name="accommodation">Accommodation</string>
    <string name="thing_to_do">Things To Do</string>
    <string name="coupons">Coupons</string>
    <string name="transportation">Transportation</string>
    <string name="event">Event</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="research">Research</string>
    <string name="my_profile">My Profile</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="draft">Draft</string>
    <string name="preview">Preview</string>
    <string name="publish">Publish</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="recent_articles">Recent Articles</string>
    <string name="liked_articles">Liked Articles</string>
    <string name="shared_articles">Shared Articles</string>
    <string name="no_recent_article">No Recent Article</string>
    <string name="no_liked_article">No Liked Article</string>
    <string name="no_shared_article">No Shared Article</string>
    <string name="no_recent_notification">No Recent Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="drafts">Drafts</string>
    <string name="stats">Stats</string>
    <string name="notifications">Notifications</string>
    <string name="favorite_tags">Favorite Tags</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">Linkedin</string>
    <string name="others">Others</string>
    <string name="edit_interests">Edit Interests</string>
    <string name="reset_password">Reset Password</string>
    <string name="about_ambit">About Ambit</string>
    <string name="about_us">About Us</string>
    <string name="feedback_and_suggestions">Feedback and Suggestions</string>
    <string name="feedback">Feedback &amp; Suggestions</string>
    <string name="travel_nleisure">TRAVEL+\nLEISURE</string>
    <string name="location">Location</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="update">Update</string>
    <string name="no_data_available">No data available</string>
    <string name="apply_coupon_optional">Apply Coupon (optional)</string>
    <string name="enter_coupon">Enter coupon</string>
    <string name="apply">APPLY</string>
    <string name="proceed_further">Proceed further</string>
    <string name="price_per_night">Price Per Night</string>
    <string name="_10_000">$10,000+</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="_00">$00</string>
    <string name="_5000">$5000</string>
    <string name="start_ratting">Start Ratting</string>
    <string name="user_ratting">User Ratting</string>
    <string name="enter_location">Enter Location</string>
    <string name="be_inspired">Be Inspired</string>
    <string name="we_bring_you_daily_travel_inspiration_through_carefully_curated_galleries_news_and_stories_about_trending_travel_destinations">we bring you daily travel inspiration through carefully curated galleries,news and stories about trending travel destinations.</string>
    <string name="past">Past Booking</string>
    <string name="pending">Pending Booking</string>
    <string name="approved">Approved Booking</string>
</resources>