<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_gray3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_1sdp"
        app:cardMaxElevation="@dimen/_1sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvPricePerNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/price_per_night"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <com.customviews.CustomBoldTextView
                android:id="@+id/tvPricePerNightAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/_10_000"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/_10ssp" />

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPricePerNight"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/min_price"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_8ssp" />

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvPricePerNightAmount"
                android:gravity="center"
                android:text="@string/max_price"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_8ssp" />

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvMinAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMinPrice"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/_00"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvMaxAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMaxPrice"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/_5000"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeSeekBar"
                android:layout_width="match_parent"
                app:bar_color="@color/light_gray"
                app:min_value="0"
                app:max_value="10000"
                app:left_thumb_image="@drawable/ic_seek_bar_indicator"
                app:right_thumb_image="@drawable/ic_seek_bar_indicator"
                app:left_thumb_color="@color/app_blue"
                app:right_thumb_color="@color/app_blue"
                app:bar_highlight_color="@color/app_blue"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/tvMaxAmount"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_1sdp"
        app:cardMaxElevation="@dimen/_1sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <com.customviews.CustomRomanTextView
                    android:id="@+id/tvStarRatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/start_ratting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <RatingBar
                    android:id="@+id/ratingBarStar"
                    style="@style/CustomRatingBarSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvStarRatting"
                    android:numStars="5"
                    android:rating="5"
                    android:stepSize="0.5" />

            </RelativeLayout>

            <View
                android:id="@+id/ListDivider"
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="0.5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <com.customviews.CustomRomanTextView
                    android:id="@+id/tvUserRatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/user_ratting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <RatingBar
                    android:id="@+id/ratingBarUser"
                    style="@style/CustomRatingBarSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvUserRatting"
                    android:numStars="5"
                    android:rating="5"
                    android:stepSize="0.5" />

            </RelativeLayout>

            <View
                android:id="@+id/CategoryDivider"
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="0.5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <com.customviews.CustomRomanTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <com.customviews.CustomRomanEditText
                    android:id="@+id/edtLocationSort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvName"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_black_bg"
                    android:text=""
                    android:hint="@string/enter_location"
                    android:textColorHint="@color/dark_gray"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_corner_app_blue_rect"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textAllCaps="true"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>


</LinearLayout>