<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgHelpImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_second"
        android:scaleType="centerCrop" />

    <com.customviews.CustomRomanTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/travel_nleisure"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvDescription"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/be_inspired"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/we_bring_you_daily_travel_inspiration_through_carefully_curated_galleries_news_and_stories_about_trending_travel_destinations"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</RelativeLayout>