<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:paddingStart="@dimen/_5sdp"
    android:paddingEnd="@dimen/_5sdp">

    <LinearLayout
        android:id="@+id/popupWindow"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_filter_bg"
        android:gravity="center"
        android:orientation="vertical">

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/pending"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dark_gray" />

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvApproved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/approved"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_3sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dark_gray" />

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvPast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/past"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>


