<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="none">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerAddons"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
        android:animateLayoutChanges="false"
        android:smoothScrollbar="true"
        android:padding="@dimen/_10sdp"
        android:scrollbars="none" />

    <com.customviews.CustomRomanTextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/no_data_available"
        android:textColor="@color/dark_gray1"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:background="@color/white_dark"
        android:orientation="vertical">

        <com.customviews.CustomRomanTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="start"
            android:text="@string/apply_coupon_optional"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.customviews.CustomRomanEditText
                android:id="@+id/edtCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_edit_text_bg"
                android:ellipsize="end"
                android:capitalize="sentences"
                android:textAllCaps="true"
                android:gravity="start"
                android:hint="@string/enter_coupon"
                android:inputType="text"
                android:lines="1"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.customviews.CustomRomanTextView
                android:id="@+id/tvApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="2"
                android:background="@drawable/rounded_top_corner_app_purple_rect"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <com.customviews.CustomRomanTextView
            android:id="@+id/tvProcessFurther"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="2"
            android:background="@drawable/rounded_top_corner_app_purple_rect"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/proceed_further"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>