<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="center|top"
            android:orientation="vertical">

            <com.customviews.CustomRomanEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_13ssp" />

            <com.customviews.CustomRomanEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_new_password"
                android:layout_marginBottom="@dimen/_15sdp"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_13ssp" />

            <com.customviews.CustomRomanEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_confirm_password"
                android:layout_marginBottom="@dimen/_35sdp"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/_13ssp" />

            <com.customviews.CustomBoldTextView
                android:id="@+id/tvUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_app_purple_rect"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:textAllCaps="true"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>